--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     <div class="video-wrapper">
                         <!-- 请将文件名替换为实际视频文件名 -->
                         <video controls poster="">
-                            <source src="demo-video.mp4" type="video/mp4">
+                            <source src="https://github.com/xiaomualan/alan-va/blob/main/615954257.mp4" type="video/mp4">
                             您的浏览器不支持视频播放。请<a href="demo-video.mp4" download>下载视频</a>查看。
                         </video>
                     </div>
@@ -327,7 +327,7 @@
                 <h2>作品集附件</h2>
                 <p>如需了解项目详细背景与技术方案，可下载原始参赛材料</p>
                 <!-- a href="TCLAI应用创新大赛初赛作品.pptx" class="download-btn" download>📊 下载项目详情PPT</a> -->
-                <a href="demo-video.mp4" class="download-btn" download>🎬 下载演示视频</a>
+                <a href="https://github.com/xiaomualan/alan-va/blob/main/615954257.mp4" class="download-btn" download>🎬 下载演示视频</a>
             </section>
         </main>
 
