--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>智汇填 - 容绍俊个人作品</title>
+    <title>智汇填 - 容绍俊作品</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -316,7 +316,7 @@
                         </video>
                     </div>
                     <p style="margin-top: 15px; color: #666; font-size: 0.95rem;">
-                        视频完整演示智汇填智能体在实际填单场景中的操作流程，包括意图识别、证照处理、自动填充与质检反馈闭环
+                        视频完整演示智汇填智能体在实际填单场景中的操作流程，包括意图识别、证照处理、自动填充与质检反馈闭环，若加载慢请等待一下
                     </p>
                 </div>
             </section>
