--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
             <section class="section">
                 <h2>作品演示视频</h2>
                 <div class="video-container">
+                    <p style="margin-top: 5px; color: #666; font-size: 0.95rem;">
+                        若加载慢请等待一下
+                    </p>
                     <div class="video-wrapper">
                         <video controls poster="">
                             <source src="https://xiaomualan.github.io/alan-va/615954257.mp4" type="video/mp4">
@@ -316,7 +319,7 @@
                         </video>
                     </div>
                     <p style="margin-top: 15px; color: #666; font-size: 0.95rem;">
-                        视频完整演示智汇填智能体在实际填单场景中的操作流程，包括意图识别、证照处理、自动填充与质检反馈闭环，若加载慢请等待一下
+                        视频完整演示智汇填智能体在实际填单场景中的操作流程，包括意图识别、证照处理、自动填充与质检反馈闭环
                     </p>
                 </div>
             </section>
