--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
             <section class="section">
                 <h2>作品演示视频</h2>
                 <div class="video-container">
-                    <p style="margin-top: 5px; color: #666; font-size: 0.95rem;">
-                        若加载慢请等待一下
+                    <p style="margin-top: -15px; color: #666; font-size: 0.95rem;">
+                        视频总大小约16M，若加载慢烦请等待一下
                     </p>
                     <div class="video-wrapper">
                         <video controls poster="">
