--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <h2>作品演示视频</h2>
                 <div class="video-container">
                     <p style="margin-top: -15px; color: #666; font-size: 0.95rem;">
-                        视频总大小约16M，若加载慢烦请等待一下
+                        视频总大小约16M，若遇加载慢烦请等待一下，您也可以点击下方 下载演示视频 按钮下载视频到本地观看
                     </p>
                     <div class="video-wrapper">
                         <video controls poster="">
